--- a/src/main/resources/templates/page/LoginForm.html
+++ b/src/main/resources/templates/page/LoginForm.html
@@ -91,7 +91,13 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff; }
+  background-color: #fff;
+  background-image: url('images/bg1.jpg');
+     background-size: cover;
+     background-position: center;
+     background-repeat: no-repeat;
+
+  }
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
@@ -8386,7 +8392,7 @@ textarea.form-control {
     </style>
 
 </head>
-<body class="img js-fullheight" style="background-image: url(images/bg.jpg);">
+<body class="img js-fullheight" style="background-image: url(images/bg3.jpg);">
 <section class="ftco-section">
     <div class="container">
         <div class="row justify-content-center">
