--- a/src/main/resources/templates/page/Admin/Testingmanage.html
+++ b/src/main/resources/templates/page/Admin/Testingmanage.html
@@ -305,7 +305,7 @@ input[type="password"] {
                         <td>${test.technician}</td>
                         <td>${test.price}</td>
 
-                        <td><button class="btn btn-danger btn-sm" onclick="deletetest(${test.id})">Delete</button></td>
+                       <td><button class="btn btn-danger btn-sm" onclick="deleteTest(${test.id})">Delete</button></td>
                     `;
                     testTableBody.appendChild(row);
                 });
@@ -324,6 +324,8 @@ input[type="password"] {
             if (response.ok) {
                 // Remove the deleted test row from the table
                 const row = document.getElementById(`testRow-${id}`);
+                alert('Delete Record Successfully....!!!');
+
                 if (row) {
                     row.remove();
                 }
@@ -333,6 +335,7 @@ input[type="password"] {
         })
         .catch(error => console.error('Error deleting test:', error));
     }
+
 </script>
 
 
@@ -397,9 +400,10 @@ input[type="password"] {
         })
         .then(response => {
             if (response.ok) {
-                alert('Message sent successfully!');
+                alert('Test Record Added successfully!');
                 // Optionally, clear the form after successful message sending
                 document.getElementById("formtest").reset();
+
             } else {
                 alert('Failed to send message. Please try again.');
             }
@@ -413,6 +417,8 @@ input[type="password"] {
 
 
 </script>
+
+
 
 </body>
 </html>
